fix layout issues for research page

--- a/app/assets/stylesheets/partials/_research.scss
+++ b/app/assets/stylesheets/partials/_research.scss
@@ -13,7 +13,7 @@ section.researchthemes {
       @include media($medium-screen) {
         @include span-columns(6);
         @include omega(2n);
-        margin-top: 0;
+        margin-top: em(20);
       }
 
       
@@ -55,4 +55,3 @@ section.researchthemes {
     }
   }
 }
-
